Apk added and updates in app title.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <div data-role="page" id="home">
   <div data-role="header" data-theme="b">
-    <h1>COREGNEIE APP</h1>
+    <h1>CoreGenie Mobile</h1>
 	
   </div>
  
